kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sock-shop
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - secretName: sock-shop-tls
    hosts:
    - shop.34.69.25.183.nip.io
  rules:
  - host: shop.34.69.25.183.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: "front-end"
          servicePort: 80
